# assignment-list-tui

./: .gitignore  Makefile.in  aclocal.m4  compile_commands.json  config.h.in  configure  configure.ac  draw.py  main.py
src/: Makefile.am  Makefile.in  draw.c  draw.h  entry.c  entry.h  group.c  group.h  main.c  tui_text.c  tui_text.h
src/.deps/: draw.Po  entry.Po  group.Po  main.Po
src/db/sqlite3/: db.c  db.h
